src/test/deca/codegen/valid/test_conversion_int_float.ass
	TSTO #4
	BOV stack_overflow_error
	ADDSP #4
; start main program
; -------------------------------------
;        Method Table
; -------------------------------------
	LOAD #null, R0
	STORE R0, 3(GB)
	LOAD code.Object.equals, R0
	STORE R0, 4(GB)
; -------------------------------------
;        Main program
; -------------------------------------
; Beginning of main instructions:
	LOAD #2, R2	; loading 2 into memory
	STORE R2, 1(GB)	; Initializing the variable x and loading it into memory
; --------BeginAssignOp--------[11, 4]-----
	LOAD 1(GB), R3	; loading x into memory
	FLOAT R3, R3	; Doing an unary minus
	STORE R3, 2(GB)	;  Assiging a value to f1
	LOAD R3, R2	;  Return value of the assignement of =f1and storing it into R2
; --------EndAssignOp--------[11, 4]-----
; --------StartBinaryOp--------[13, 7]-----
	LOAD 2(GB), R2	; loading f1 into memory
	LOAD #2, R3	; loading 2 into memory
	FLOAT R3, R3	; Doing an unary minus
	CMP R3, R2	; Comparing registers for Equals operation 
	SEQ R2	; Placing Equals result into the register  
; --------EndBinaryOp--------[13, 7]-----
; ---------Startif-----------[13, 4]
	CMP #1, R2	; Comparing expr output in the ifthenelse
	BNE else1
	WSTR "test de conversion d'un int en float est validé"
	WNL
	BRA end_ifthenelse_1
else1:
	WSTR "test de conversion d'un int en float n'est pas validé"
	WNL
end_ifthenelse_1:
; ---------Endif-----------
	HALT
; -------------------------------------
;        Classes
; -------------------------------------
; -------------------------------------
;        Method equal
; -------------------------------------
; ------------------Start generateCodeForObjectEquals location:
code.Object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	SEQ R0	; Comparaison this et paramètre d'equals
fin.Object.equals:
	RTS
init.Object:
	RTS
; -------------------------------------
;        Liste Erreur
; -------------------------------------
stack_overflow_error:
	WSTR "Error: stack_overflow_error"
	WNL
	ERROR
; end main program
